@@ -14,17 +14,17 @@ public class GameTest {
     // HELPER
 
 
-    private CellType[][] createEmptyBoard(int rows, int cols) {
-        CellType[][] board = new CellType[rows][cols];
-        for (int i = 0; i < rows; i++)
-            for (int j = 0; j < cols; j++)
+    private CellType[][] createEmptyBoard() {
+        CellType[][] board = new CellType[5][5];
+        for (int i = 0; i < 5; i++)
+            for (int j = 0; j < 5; j++)
                 board[i][j] = CellType.EMPTY;
         return board;
     }
 
-    private TheDOPOHardestGame basicGame(int rows, int cols, int startRow, int startCol) {
+    private TheDOPOHardestGame basicGame(int startRow, int startCol) {
         return new TheDOPOHardestGame(
-                createEmptyBoard(rows, cols),
+                createEmptyBoard(),
                 new Position(startRow, startCol),
                 new ArrayList<>(),
                 new ArrayList<>(),
@@ -38,7 +38,7 @@ public class GameTest {
 
     @Test
     public void testPlayerMovementValid() {
-        TheDOPOHardestGame game = basicGame(5, 5, 2, 2);
+        TheDOPOHardestGame game = basicGame(2, 2);
         game.movePlayer(1, 0);
         assertEquals(3, game.getPlayer().getPosition().getRow());
         assertEquals(2, game.getPlayer().getPosition().getCol());
@@ -46,7 +46,7 @@ public class GameTest {
 
     @Test
     public void testPlayerMovementWall() {
-        CellType[][] board = createEmptyBoard(5, 5);
+        CellType[][] board = createEmptyBoard();
         board[3][2] = CellType.WALL;
         TheDOPOHardestGame game = new TheDOPOHardestGame(board, new Position(2, 2),
                 new ArrayList<>(), new ArrayList<>(), 60, GameMode.PLAYER, Skin.RED);
@@ -57,7 +57,7 @@ public class GameTest {
 
     @Test
     public void testPlayerMovementOutOfBounds() {
-        TheDOPOHardestGame game = basicGame(5, 5, 0, 0);
+        TheDOPOHardestGame game = basicGame(0, 0);
         game.movePlayer(-1, 0); // intenta salir por arriba
         assertEquals(0, game.getPlayer().getPosition().getRow());
         assertEquals(0, game.getPlayer().getPosition().getCol());
@@ -65,7 +65,7 @@ public class GameTest {
 
     @Test
     public void testPlayerDiagonalMovement() {
-        TheDOPOHardestGame game = basicGame(5, 5, 2, 2);
+        TheDOPOHardestGame game = basicGame(2, 2);
         game.movePlayer(1, 1); // diagonal
         assertEquals(3, game.getPlayer().getPosition().getRow());
         assertEquals(3, game.getPlayer().getPosition().getCol());
@@ -74,7 +74,7 @@ public class GameTest {
     @Test
     public void testPlayerCannotMoveWhenGameOver() {
         TheDOPOHardestGame game = new TheDOPOHardestGame(
-                createEmptyBoard(5, 5), new Position(2, 2),
+                createEmptyBoard(), new Position(2, 2),
                 new ArrayList<>(), new ArrayList<>(),
                 1, GameMode.PLAYER, Skin.RED);
         game.tickTime(); // tiempo se agota → isGameOver = true
@@ -84,7 +84,7 @@ public class GameTest {
 
     @Test
     public void testPlayerCannotMoveAfterVictory() {
-        CellType[][] board = createEmptyBoard(5, 5);
+        CellType[][] board = createEmptyBoard();
         board[2][3] = CellType.SAFE_END;
         TheDOPOHardestGame game = new TheDOPOHardestGame(board, new Position(2, 2),
                 new ArrayList<>(), new ArrayList<>(), 60, GameMode.PLAYER, Skin.RED);
@@ -100,7 +100,7 @@ public class GameTest {
 
     @Test
     public void testTimeDecreases() {
-        TheDOPOHardestGame game = basicGame(5, 5, 2, 2);
+        TheDOPOHardestGame game = basicGame(2, 2);
         int initial = game.getTimeRemaining();
         game.tickTime();
         assertEquals(initial - 1, game.getTimeRemaining());
@@ -109,7 +109,7 @@ public class GameTest {
     @Test
     public void testGameOverWhenTimeRunsOut() {
         TheDOPOHardestGame game = new TheDOPOHardestGame(
-                createEmptyBoard(5, 5), new Position(2, 2),
+                createEmptyBoard(), new Position(2, 2),
                 new ArrayList<>(), new ArrayList<>(),
                 1, GameMode.PLAYER, Skin.RED);
         assertFalse(game.isGameOver());
@@ -120,7 +120,7 @@ public class GameTest {
     @Test
     public void testTimeDoesNotDecreaseWhenGameOver() {
         TheDOPOHardestGame game = new TheDOPOHardestGame(
-                createEmptyBoard(5, 5), new Position(2, 2),
+                createEmptyBoard(), new Position(2, 2),
                 new ArrayList<>(), new ArrayList<>(),
                 1, GameMode.PLAYER, Skin.RED);
         game.tickTime(); // llega a 0 → game over
@@ -134,7 +134,7 @@ public class GameTest {
 
     @Test
     public void testCoinCollection() {
-        CellType[][] board = createEmptyBoard(5, 5);
+        CellType[][] board = createEmptyBoard();
         List<Coin> coins = new ArrayList<>();
         coins.add(new Coin(new Position(2, 3), true));
         TheDOPOHardestGame game = new TheDOPOHardestGame(board, new Position(2, 2),
@@ -146,7 +146,7 @@ public class GameTest {
 
     @Test
     public void testMultipleCoinsCollectedOneByOne() {
-        CellType[][] board = createEmptyBoard(5, 5);
+        CellType[][] board = createEmptyBoard();
         List<Coin> coins = new ArrayList<>();
         coins.add(new Coin(new Position(2, 3), true));
         coins.add(new Coin(new Position(2, 4), true));
@@ -160,7 +160,7 @@ public class GameTest {
 
     @Test
     public void testNoVictoryWithCoinsRemaining() {
-        CellType[][] board = createEmptyBoard(5, 5);
+        CellType[][] board = createEmptyBoard();
         board[2][3] = CellType.SAFE_END;
         List<Coin> coins = new ArrayList<>();
         coins.add(new Coin(new Position(4, 4), true)); // moneda sin recoger
@@ -176,7 +176,7 @@ public class GameTest {
 
     @Test
     public void testEnemyCollisionResetsPlayer() {
-        CellType[][] board = createEmptyBoard(5, 5);
+        CellType[][] board = createEmptyBoard();
         List<Enemy> enemies = new ArrayList<>();
         enemies.add(new BasicBlueEnemy(new Position(2, 3), true));
         TheDOPOHardestGame game = new TheDOPOHardestGame(board, new Position(2, 2),
@@ -189,7 +189,7 @@ public class GameTest {
 
     @Test
     public void testMultipleDeathsAccumulate() {
-        CellType[][] board = createEmptyBoard(5, 5);
+        CellType[][] board = createEmptyBoard();
         List<Enemy> enemies = new ArrayList<>();
         enemies.add(new BasicBlueEnemy(new Position(2, 3), true));
         TheDOPOHardestGame game = new TheDOPOHardestGame(board, new Position(2, 2),
@@ -201,7 +201,7 @@ public class GameTest {
 
     @Test
     public void testEnemyDoesNotCollectCoins() {
-        CellType[][] board = createEmptyBoard(5, 5);
+        CellType[][] board = createEmptyBoard();
         List<Coin> coins = new ArrayList<>();
         coins.add(new Coin(new Position(3, 5), true));
         List<Enemy> enemies = new ArrayList<>();
@@ -217,7 +217,7 @@ public class GameTest {
 
     @Test
     public void testSafeMidUpdatesRespawnPoint() {
-        CellType[][] board = createEmptyBoard(5, 5);
+        CellType[][] board = createEmptyBoard();
         board[2][3] = CellType.SAFE_MID;
         TheDOPOHardestGame game = new TheDOPOHardestGame(board, new Position(2, 2),
                 new ArrayList<>(), new ArrayList<>(), 60, GameMode.PLAYER, Skin.RED);
@@ -228,7 +228,7 @@ public class GameTest {
 
     @Test
     public void testPlayerRespawnsAtMidZoneAfterDeath() {
-        CellType[][] board = createEmptyBoard(5, 5);
+        CellType[][] board = createEmptyBoard();
         board[2][3] = CellType.SAFE_MID;
         List<Enemy> enemies = new ArrayList<>();
         enemies.add(new BasicBlueEnemy(new Position(2, 1), true)); // enemigo a la izquierda
@@ -246,7 +246,7 @@ public class GameTest {
 
     @Test
     public void testVictoryCondition() {
-        CellType[][] board = createEmptyBoard(5, 5);
+        CellType[][] board = createEmptyBoard();
         board[2][3] = CellType.SAFE_END;
         TheDOPOHardestGame game = new TheDOPOHardestGame(board, new Position(2, 2),
                 new ArrayList<>(), new ArrayList<>(), 60, GameMode.PLAYER, Skin.RED);
@@ -256,7 +256,7 @@ public class GameTest {
 
     @Test
     public void testVictoryAfterCollectingAllCoins() {
-        CellType[][] board = createEmptyBoard(5, 5);
+        CellType[][] board = createEmptyBoard();
         board[2][4] = CellType.SAFE_END;
         List<Coin> coins = new ArrayList<>();
         coins.add(new Coin(new Position(2, 3), true));
@@ -274,38 +274,38 @@ public class GameTest {
 
     @Test
     public void testBasicBlueEnemyMovesHorizontally() {
-        CellType[][] board = createEmptyBoard(5, 5);
+        CellType[][] board = createEmptyBoard();
         List<Enemy> enemies = new ArrayList<>();
         enemies.add(new BasicBlueEnemy(new Position(2, 2), true));
         TheDOPOHardestGame game = new TheDOPOHardestGame(board, new Position(0, 0),
                 enemies, new ArrayList<>(), 60, GameMode.PLAYER, Skin.RED);
         game.moveEnemies();
-        assertEquals(2, game.getEnemies().get(0).getPosition().getRow());
-        assertEquals(3, game.getEnemies().get(0).getPosition().getCol());
+        assertEquals(2, game.getEnemies().getFirst().getPosition().getRow());
+        assertEquals(3, game.getEnemies().getFirst().getPosition().getCol());
     }
 
     @Test
     public void testBasicBlueEnemyMovesVertically() {
-        CellType[][] board = createEmptyBoard(5, 5);
+        CellType[][] board = createEmptyBoard();
         List<Enemy> enemies = new ArrayList<>();
         enemies.add(new BasicBlueEnemy(new Position(2, 2), false));
         TheDOPOHardestGame game = new TheDOPOHardestGame(board, new Position(0, 0),
                 enemies, new ArrayList<>(), 60, GameMode.PLAYER, Skin.RED);
         game.moveEnemies();
-        assertEquals(3, game.getEnemies().get(0).getPosition().getRow());
-        assertEquals(2, game.getEnemies().get(0).getPosition().getCol());
+        assertEquals(3, game.getEnemies().getFirst().getPosition().getRow());
+        assertEquals(2, game.getEnemies().getFirst().getPosition().getCol());
     }
 
     @Test
     public void testBasicBlueEnemyBouncesOffWall() {
-        CellType[][] board = createEmptyBoard(5, 5);
+        CellType[][] board = createEmptyBoard();
         board[2][4] = CellType.WALL;
         List<Enemy> enemies = new ArrayList<>();
         enemies.add(new BasicBlueEnemy(new Position(2, 3), true)); // junto a la pared → rebota a la izquierda
         TheDOPOHardestGame game = new TheDOPOHardestGame(board, new Position(0, 0),
                 enemies, new ArrayList<>(), 60, GameMode.PLAYER, Skin.RED);
         game.moveEnemies();
-        assertEquals(2, game.getEnemies().get(0).getPosition().getCol());
+        assertEquals(2, game.getEnemies().getFirst().getPosition().getCol());
     }
 
 
@@ -356,14 +356,14 @@ public class GameTest {
 
     @Test
     public void testIsValidPositionInsideBoard() {
-        TheDOPOHardestGame game = basicGame(5, 5, 0, 0);
+        TheDOPOHardestGame game = basicGame(0, 0);
         assertTrue(game.isValidPosition(0, 0));
         assertTrue(game.isValidPosition(4, 4));
     }
 
     @Test
     public void testIsValidPositionOutsideBoard() {
-        TheDOPOHardestGame game = basicGame(5, 5, 0, 0);
+        TheDOPOHardestGame game = basicGame(0, 0);
         assertFalse(game.isValidPosition(-1, 0));
         assertFalse(game.isValidPosition(5, 0));
         assertFalse(game.isValidPosition(0, 5));
@@ -371,7 +371,7 @@ public class GameTest {
 
     @Test
     public void testGetCellReturnsCorrectType() {
-        CellType[][] board = createEmptyBoard(5, 5);
+        CellType[][] board = createEmptyBoard();
         board[2][2] = CellType.WALL;
         TheDOPOHardestGame game = new TheDOPOHardestGame(board, new Position(0, 0),
                 new ArrayList<>(), new ArrayList<>(), 60, GameMode.PLAYER, Skin.RED);
